OpenLDAP 2.3 Change Log

OpenLDAP 2.3.22 Release
	Fixed libldap referral input destroy issue (ITS#4533)
	Fixed libldap ldap_sort_entries tail bug (ITS#4536)
	Fixed libldap default connection concurrency issue (ITS#4541)
	Fixed libldap_r thread debug missing break
	Fixed libldap_r tpool cleanup
	Fixed liblutil strtoul(3) usage (ITS#4503)
	Fixed liblutil time resolution issue (ITS#4514)
	Updated ldapdelete(1) to stdout bug (ITS#4453)
	Updated ldapsearch(1) BASE output (ITS#4504)
	Fixed slapd backglue issue (ITS#4529)
	Fixed slapd cn=config (ITS#4512)
	Fixed slapd cn=config ACL application fix
	Fixed slapd cn=config olcLimits (ITS#4515)
	Fixed slapd dynacl tgrant/tdeny initialization
	Fixed slapd runqueue use of freed memory (ITS#4517)
	Fixed slapd slap_send_ldap_result bug (ITS#4499)
	Fixed slapd thread pool init issue (ITS#4513)
	Added slapd syncrepl mandatory searchbase check
	Fixed slapd-bdb/hdb pre/post-read freeing (ITS#4532)
	Fixed slapd-bdb/hdb pre/post-read unavailable issue (ITS#4538)
	Fixed slapd-bdb/hdb referral issue (ITS#4548)
	Fixed slapd-hdb IDL sort issue (ITS#4531)
	Fixed slapd-ldap proxyAuthz of bound identity/override (ITS#4497)
	Fixed slapd-ldap/meta protocol version propagation (ITS#4488)
	Fixed slapd-ldap fd cleanup (ITS#4474)
	Fixed slapd-ldif deadlock (ITS#4500)
	Fixed slapd-shell (ITS#4495)
	Fixed slapadd cn=config issue (ITS#4194)
	Fixed slapo-accesslog log purging issue (ITS#4505)
	Added slapo-accesslog reqOld feature
	Fixed slapo-auditlog missing return codes
	Fixed slapo-ppolicy BER tags issue (ITS#4528)
	Fixed slapo-ppolicy rebind bug (ITS#4516)
	Fixed slapo-refint delete prohibit issue (ITS#4442)
	Fixed slapo-syncprov MODs cause DELs (ITS#4423)
	Fixed slapo-syncprov/syncrepl sessionlog issue (ITS#4534)
	Added slapo-syncprov extra logging
	Fixed slapo-translucent modifications (ITS#4527)
	Fixed slurpd potential overflow issue
	Build Environment
		Fixed OSF1 compilation problem (ITS#4537)