@@ -15,7 +15,7 @@
 ol_package=OpenLDAP
 ol_major=2
 ol_minor=3
-ol_patch=22
+ol_patch=X
 ol_api_inc=20322
 ol_api_current=2
 ol_api_revision=10
