@@ -112,6 +112,7 @@ ldap_back_exop_passwd(
 	ber_int_t	msgid;
 	int		rc, isproxy;
 	int		do_retry = 1;
+	char *text = NULL;
 
 	lc = ldap_back_getconn( op, rs, LDAP_BACK_SENDERR );
 	if ( !lc || !ldap_back_dobind( lc, op, rs, LDAP_BACK_SENDERR ) ) {
@@ -140,7 +141,7 @@ retry:
 			 */
 			rc = ldap_parse_result( lc->lc_ld, res, &rs->sr_err,
 					(char **)&rs->sr_matched,
-					(char **)&rs->sr_text,
+					&text,
 					NULL, NULL, 0 );
 #ifndef LDAP_NULL_IS_NULL
 			if ( rs->sr_matched && rs->sr_matched[ 0 ] == '\0' ) {
@@ -190,6 +191,7 @@ retry:
 				goto retry;
 			}
 		}
+		if ( text ) rs->sr_text = text;
 		send_ldap_extended( op, rs );
 		/* otherwise frontend resends result */
 		rc = rs->sr_err = SLAPD_ABANDON;
@@ -201,8 +203,8 @@ retry:
 		rs->sr_matched = NULL;
 	}
 
-	if ( rs->sr_text ) {
-		free( (char *)rs->sr_text );
+	if ( text ) {
+		free( text );
 		rs->sr_text = NULL;
 	}
 
@@ -223,6 +225,7 @@ ldap_back_exop_generic(
 	ber_int_t	msgid;
 	int		rc;
 	int		do_retry = 1;
+	char *text = NULL;
 
 	lc = ldap_back_getconn( op, rs, LDAP_BACK_SENDERR );
 	if ( !lc || !ldap_back_dobind( lc, op, rs, LDAP_BACK_SENDERR ) ) {
@@ -248,7 +251,7 @@ retry:
 			 */
 			rc = ldap_parse_result( lc->lc_ld, res, &rs->sr_err,
 					(char **)&rs->sr_matched,
-					(char **)&rs->sr_text,
+					text,
 					NULL, NULL, 0 );
 #ifndef LDAP_NULL_IS_NULL
 			if ( rs->sr_matched && rs->sr_matched[ 0 ] == '\0' ) {
@@ -284,6 +287,7 @@ retry:
 				goto retry;
 			}
 		}
+		if ( text ) rs->sr_text = text;
 		send_ldap_extended( op, rs );
 		/* otherwise frontend resends result */
 		rc = rs->sr_err = SLAPD_ABANDON;
@@ -295,8 +299,8 @@ retry:
 		rs->sr_matched = NULL;
 	}
 
-	if ( rs->sr_text ) {
-		free( (char *)rs->sr_text );
+	if ( text ) {
+		free( text );
 		rs->sr_text = NULL;
 	}
 
