@@ -1,5 +1,8 @@
 OpenLDAP 2.3 Change Log
 
+OpenLDAP 2.3.23 Engineering
+	Fixed slapd-ldap improper free bug (ITS#4450)
+
 OpenLDAP 2.3.22 Release
 	Fixed libldap referral input destroy issue (ITS#4533)
 	Fixed libldap ldap_sort_entries tail bug (ITS#4536)
